crates/swift-bridge-macro/tests/ui/unrecognized-function-attribute.stderr
error: Unrecognized attribute "InvalidAttribute".
 --> tests/ui/unrecognized-function-attribute.rs:7:24
  |
7 |         #[swift_bridge(InvalidAttribute)]
  |                        ^^^^^^^^^^^^^^^^
